[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "toot"
authors = [{ name="Ivan Habunek", email="ivan@habunek.com" }]
description = "Mastodon CLI client"
readme = "README.rst"
license = "GPL-3.0-only"
requires-python = ">=3.9"
dynamic = ["version"]

classifiers = [
    "Environment :: Console :: Curses",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "beautifulsoup4>=4.5.0,<5.0",
    "click~=8.1",
    "python-dateutil>=2.8.1,<3.0",
    "requests>=2.13,<3.0",
    "tomlkit>=0.10.0,<1.0",
    "urwid~=3.0",
    "wcwidth>=0.1.7",
]

[project.optional-dependencies]
# Required to display images in the TUI
images = [
    "pillow>=9.5.0",
    "term-image>=0.7.2",
]

[project.urls]
"Homepage" = "https://toot.bezdomni.net"
"Source" = "https://github.com/ihabunek/toot/"

[project.scripts]
toot = "toot.cli:cli"

[tool.setuptools]
packages=[
    "toot",
    "toot.cli",
    "toot.tui",
    "toot.tui.richtext",
    "toot.utils",
    "urwidgets",
]

[tool.setuptools_scm]

[tool.pyright]
pythonVersion = "3.8"

[tool.ruff]
line-length = 100
target-version = "py38"

[dependency-groups]
dev = [
    "build",
    "flake8",
    "mypy",
    "pillow>=9.5.0",
    "pudb>=2025.1",
    "pyright",
    "pytest",
    "pytest-xdist[psutil]",
    "pyyaml",
    "setuptools",
    "twine",
    "types-beautifulsoup4",
    "typing-extensions",
    "vermin",
]
